--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-material-design": "^0.3.7",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-table-component": "^1.2.2",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
     "react-navigation": "^4.4.4",
